lesson6/Deployment-private-registry.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
  labels:
    app: my-app-deployment-label
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: 192.168.1.3:8123/lesson3_apache:1c34351f9e95
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: "/etc/nginx/conf.d"
          readOnly: true
      imagePullSecrets:
      - name: my-docker-secret
      volumes:    
      - name: nginx-config
        configMap:
          name: my-configmap
          items:
          - key: "default.conf"
            path: "default.conf"
