lesson6/service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service-clusterip
spec:
  selector:
    app: my-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
