lesson6/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer
  namespace: ingress-nginx
spec:
  selector:
    service: my-nginx
  ports:
    - nodePort: 80
      protocol: TCP
      port: 30772
      targetPort: 30772
  type: LoadBalancer
  externalIPs:
    - 192.168.99.212
