lesson6/ingresss-my-app.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: my-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: my-service-clusterip
              servicePort: 8080
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  #  tls:
  #    - hosts:
  #        - www.example.com
  #      secretName: example-tls
